Added a friendship system. Added profile pictures.
